// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCommittedTheme with no options give existing defaults 1`] = `
Object {
  "breakpoints": Object {
    "between": [Function],
    "down": [Function],
    "keys": Array [
      "xs",
      "sm",
      "md",
      "lg",
      "xl",
    ],
    "only": [Function],
    "up": [Function],
    "values": Object {
      "lg": 1280,
      "md": 960,
      "sm": 600,
      "xl": 1920,
      "xs": 0,
    },
    "width": [Function],
  },
  "direction": "ltr",
  "fontSizing": [Function],
  "fonts": Object {
    "display": Object {
      "fontFamily": "\\"Helvetica Neue\\", \\"Segoe UI\\", Helvetica, Arial, sans-serif",
    },
    "heading": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
    },
    "monospace": Object {
      "fontFamily": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", \\"Andale Mono\\", \\"Ubuntu Mono\\", Menlo, Courier, monospace",
    },
    "subheading": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
    },
    "text": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
    },
    "typography": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
    },
  },
  "mixins": Object {
    "gutters": [Function],
    "toolbar": Object {
      "@media (min-width:0px) and (orientation: landscape)": Object {
        "minHeight": 48,
      },
      "@media (min-width:600px)": Object {
        "minHeight": 64,
      },
      "minHeight": 56,
    },
  },
  "overrides": Object {
    "MuiAlert": Object {
      "root": Object {
        "marginBottom": "8px",
        "marginTop": "8px",
      },
    },
    "MuiBackdrop": Object {
      "root": Object {
        "color": "#7E7E7E",
      },
    },
    "MuiButton": Object {
      "contained": Object {
        "&$disabled": Object {
          "backgroundColor": "#B1B1B188",
        },
        "&:hover": Object {
          "backgroundColor": "rgb(103, 103, 103)",
        },
      },
      "containedPrimary": Object {
        "&$disabled": Object {
          "backgroundColor": "#3E3E3E88",
        },
        "&:hover": Object {
          "backgroundColor": "rgb(69, 69, 69)",
        },
      },
      "containedSecondary": Object {
        "&$disabled": Object {
          "backgroundColor": "rgb(255, 249, 231)88",
        },
      },
      "disabled": Object {},
      "outlined": Object {
        "&$disabled": Object {
          "borderColor": "#7E7E7E88",
          "color": "#CFCFCF88",
        },
      },
      "outlinedPrimary": Object {
        "&$disabled": Object {
          "backgroundColor": "rgb(110, 110, 110)88",
          "borderColor": "#FFDD8088",
        },
        "&:hover": Object {
          "backgroundColor": "rgb(59, 59, 59)",
          "borderColor": "#3E3E3E",
        },
        "backgroundColor": "#616161",
        "borderColor": "#3E3E3E",
        "color": "#FFc526",
      },
      "outlinedSecondary": Object {
        "&$disabled": Object {
          "backgroundColor": "rgb(255, 231, 166)88",
          "borderColor": "#3E3E3E88",
          "color": "#2E2E2E88",
        },
        "&:hover": Object {
          "backgroundColor": "rgb(255, 219, 121)",
          "borderColor": "#3E3E3E",
        },
        "backgroundColor": "rgb(255, 231, 166)",
        "borderColor": "#3E3E3E",
        "color": "#2E2E2E",
      },
      "root": Object {
        "textTransform": "none",
      },
      "text": Object {
        "&$disabled": Object {
          "color": "#3B3B3B88",
        },
      },
      "textPrimary": Object {
        "&$disabled": Object {},
        "&:hover": Object {
          "backgroundColor": "rgba(255, 187, 0, 0.04)",
        },
        "color": "#3E3E3E",
      },
      "textSecondary": Object {
        "&:hover": Object {
          "backgroundColor": "rgba(62, 62, 62, 0.04)",
        },
        "color": "#FFAC00",
      },
    },
    "MuiCheckbox": Object {
      "colorPrimary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#FFBB00",
        },
        "&$checked": Object {
          "&$disabled": Object {
            "color": "rgba(126, 126, 126, 0.7)",
          },
          "&:hover": Object {
            "backgroundColor": "rgba(255, 187, 0, 0.04)",
          },
          "color": "#3E3E3E",
        },
        "&$disabled": Object {
          "color": "rgba(126, 126, 126, 0.7)",
        },
        "color": "#3E3E3E",
      },
      "colorSecondary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#3E3E3E",
        },
        "&$checked": Object {
          "&:hover": Object {
            "backgroundColor": "rgba(62, 62, 62, 0.04)",
          },
          "color": "#FFc526",
        },
        "&$disabled": Object {
          "color": "rgba(126, 126, 126, 0.7)",
        },
        "color": "#FFc526",
      },
      "root": Object {
        "&$disabled": Object {
          "color": "rgba(126, 126, 126, 0.7)",
        },
        "color": "#7E7E7E",
      },
    },
    "MuiCssBaseline": Object {
      "@global": Object {
        "button, input, optgroup, select, textarea": Object {
          "fontFamily": "inherit",
          "fontSize": "inherit",
        },
        "textRendering": "optimizeLegibility",
        "textSizeAdjust": "100%",
      },
    },
    "MuiDialog": Object {
      "paper": Object {
        "borderTop": "4px solid #FFBB00",
      },
    },
    "MuiDivider": Object {
      "vertical": Object {
        "height": "auto",
      },
    },
    "MuiIconButton": Object {
      "colorPrimary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#FFBB00",
        },
        "&:hover": Object {
          "backgroundColor": "rgba(255, 187, 0, 0.04)",
        },
      },
      "colorSecondary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#3E3E3E",
        },
        "&:hover": Object {
          "backgroundColor": "rgba(62, 62, 62, 0.04)",
        },
        "color": "#FFAC00",
      },
    },
    "MuiRadio": Object {
      "colorPrimary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#FFBB00",
        },
        "& svg:nth-of-type(2)": Object {
          "color": "#FFBB00",
        },
        "&$checked": Object {
          "&:hover": Object {
            "backgroundColor": "rgba(255, 187, 0, 0.04)",
          },
          "color": "#3E3E3E",
        },
        "&$disabled": Object {
          "& svg:nth-of-type(2)": Object {
            "color": "#FFBB0088",
          },
          "color": "#3E3E3E88",
        },
        "color": "#3E3E3E",
      },
      "colorSecondary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#3E3E3E",
        },
        "& svg:nth-of-type(2)": Object {
          "color": "#3E3E3E",
        },
        "&$checked": Object {
          "&:hover": Object {
            "backgroundColor": "rgba(62, 62, 62, 0.04)",
          },
          "color": "#FFAC00",
        },
        "&$disabled": Object {
          "& svg:nth-of-type(2)": Object {
            "color": "#3E3E3E88",
          },
          "color": "#FFF7E088",
        },
        "color": "#FFAC00",
      },
      "root": Object {
        "&$disabled": Object {
          "color": "#7E7E7E88",
        },
        "color": "#7E7E7E",
      },
    },
    "MuiSwitch": Object {
      "colorPrimary": Object {
        "&$checked + $track": Object {
          "backgroundColor": "#FFBB00",
        },
      },
      "root": Object {
        "&$disabled": Object {
          "color": "#7E7E7E88",
        },
        "color": "#7E7E7E",
      },
    },
    "MuiTableBody": Object {
      "root": Object {
        "& tr:last-child": Object {
          "borderBottom": "1px solid #FFBB00",
        },
        "& tr:last-child > td": Object {
          "borderBottom": "none",
        },
        "& tr:last-child > th": Object {
          "borderBottom": "none",
        },
        "& tr:nth-child(even)": Object {
          "backgroundColor": "#E1E1E1",
        },
        "borderColor": "#E1E1E1",
      },
    },
    "MuiTableFooter": Object {
      "root": Object {
        "& th,td": Object {
          "borderBottom": "none",
          "borderTop": "none",
          "color": "#3B3B3B",
          "fontWeight": "bold",
        },
        "borderBottom": "1px solid #FFBB00",
      },
    },
    "MuiTableHead": Object {
      "root": Object {
        "& th": Object {
          "borderBottom": "none",
          "color": "#3B3B3B",
          "fontWeight": "bold",
        },
        "borderBottom": "1px solid #FFBB00",
      },
    },
    "MuiTableRow": Object {
      "body": Object {
        "borderBottomColor": "#E1E1E1",
      },
    },
    "MuiTabs": Object {
      "indicator": Object {
        "backgroundColor": "#FFBB00",
        "height": "4px",
      },
    },
  },
  "palette": Object {
    "action": Object {
      "activatedOpacity": 0.12,
      "active": "rgba(0, 0, 0, 0.54)",
      "disabled": "rgba(0, 0, 0, 0.26)",
      "disabledBackground": "rgba(0, 0, 0, 0.12)",
      "disabledOpacity": 0.38,
      "focus": "rgba(0, 0, 0, 0.12)",
      "focusOpacity": 0.12,
      "hover": "rgba(0, 0, 0, 0.04)",
      "hoverOpacity": 0.04,
      "selected": "rgba(0, 0, 0, 0.08)",
      "selectedOpacity": 0.08,
    },
    "augmentColor": [Function],
    "background": Object {
      "default": "#F7F7F7",
      "paper": "white",
    },
    "brand": Object {
      "contrastText": "#222222",
      "dark": "#FFAC00",
      "light": "#FFCF4D",
      "main": "#FFBB00",
    },
    "common": Object {
      "black": "#000",
      "white": "#fff",
    },
    "contrastThreshold": 3,
    "divider": "rgba(0, 0, 0, 0.12)",
    "error": Object {
      "100": "#FACDCD",
      "200": "#F29B9B",
      "300": "#E66A6A",
      "400": "#D64545",
      "50": "#FFEEEE",
      "500": "#BA2525",
      "600": "#A61B1B",
      "700": "#911111",
      "800": "#780A0A",
      "900": "#610404",
      "A100": "#FFC3C3",
      "A200": "#FF9090",
      "A400": "#FF5D5D",
      "A700": "#FF4444",
      "contrastText": "#fff",
      "dark": "#911111",
      "light": "#E66A6A",
      "main": "#BA2525",
    },
    "getContrastText": [Function],
    "grey": Object {
      "100": "#E1E1E1",
      "200": "#CFCFCF",
      "300": "#B1B1B1",
      "400": "#9E9E9E",
      "50": "#F7F7F7",
      "500": "#7E7E7E",
      "600": "#626262",
      "700": "#515151",
      "800": "#3B3B3B",
      "900": "#222222",
      "A100": "#d5d5d5",
      "A200": "#aaaaaa",
      "A400": "#303030",
      "A700": "#616161",
    },
    "info": Object {
      "contrastText": "#222222",
      "dark": "#2BB0ED",
      "light": "#B3ECFF",
      "main": "#5ED0FA",
    },
    "primary": Object {
      "contrastText": "#FFBB00",
      "dark": "#2E2E2E",
      "light": "#616161",
      "main": "#3E3E3E",
    },
    "secondary": Object {
      "contrastText": "#454545",
      "dark": "#FFc526",
      "light": "#FFF7E0",
      "main": "#FFDD80",
    },
    "success": Object {
      "contrastText": "#222222",
      "dark": "#147D64",
      "light": "#65D6AD",
      "main": "#27AB83",
    },
    "text": Object {
      "disabled": "#7E7E7E",
      "hint": "#7E7E7E",
      "primary": "#3B3B3B",
      "secondary": "#515151",
    },
    "tonalOffset": 0.2,
    "type": "light",
    "warning": Object {
      "contrastText": "#222222",
      "dark": "#AB4E19",
      "light": "#FAB38B",
      "main": "#E67635",
    },
  },
  "props": Object {},
  "shadows": Array [
    "none",
    "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
    "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
    "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
  ],
  "shape": Object {
    "borderRadius": 2,
  },
  "spacing": [Function],
  "transitions": Object {
    "create": [Function],
    "duration": Object {
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195,
      "short": 250,
      "shorter": 200,
      "shortest": 150,
      "standard": 300,
    },
    "easing": Object {
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
    },
    "getAutoHeightDuration": [Function],
  },
  "typography": Object {
    "body1": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1rem",
      "fontWeight": 400,
      "lineHeight": 1.5,
    },
    "body2": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.2238rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.2238rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.2238rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.1rem",
      "fontWeight": 400,
      "lineHeight": 1.43,
    },
    "button": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1rem",
      "fontWeight": 500,
      "lineHeight": 1.75,
      "textTransform": "uppercase",
    },
    "caption": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "0.833rem",
      "fontWeight": 400,
      "lineHeight": 1.66,
    },
    "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
    "fontSize": 16,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "2.5707rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "2.1422rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "2.3565rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.744rem",
      "fontWeight": 300,
      "lineHeight": 1.167,
    },
    "h2": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "2.0833rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.875rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.875rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.537rem",
      "fontWeight": 300,
      "lineHeight": 1.2,
    },
    "h3": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.7138rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.4996rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.7138rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.3639999999999999rem",
      "fontWeight": 400,
      "lineHeight": 1.167,
    },
    "h4": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.417rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.417rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.417rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.22rem",
      "fontWeight": 400,
      "lineHeight": 1.235,
    },
    "h5": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.1244rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.1244rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.1244rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.1rem",
      "fontWeight": 400,
      "lineHeight": 1.334,
    },
    "h6": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1rem",
      "fontWeight": 500,
      "lineHeight": 1.6,
    },
    "htmlFontSize": 16,
    "overline": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "0.833rem",
      "fontWeight": 400,
      "lineHeight": 2.66,
      "textTransform": "uppercase",
    },
    "pxToRem": [Function],
    "round": [Function],
    "subtitle1": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1rem",
      "fontWeight": 400,
      "lineHeight": 1.75,
    },
    "subtitle2": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "0.833rem",
      "fontWeight": 500,
      "lineHeight": 1.57,
    },
  },
  "zIndex": Object {
    "appBar": 1100,
    "drawer": 1200,
    "mobileStepper": 1000,
    "modal": 1300,
    "snackbar": 1400,
    "speedDial": 1050,
    "tooltip": 1500,
  },
}
`;

exports[`createCommittedTheme with no options give existing defaults 2`] = `
Object {
  "breakpoints": Object {
    "between": [Function],
    "down": [Function],
    "keys": Array [
      "xs",
      "sm",
      "md",
      "lg",
      "xl",
    ],
    "only": [Function],
    "up": [Function],
    "values": Object {
      "lg": 1280,
      "md": 960,
      "sm": 600,
      "xl": 1920,
      "xs": 0,
    },
    "width": [Function],
  },
  "direction": "ltr",
  "fontSizing": [Function],
  "fonts": Object {
    "display": Object {
      "fontFamily": "\\"Helvetica Neue\\", \\"Segoe UI\\", Helvetica, Arial, sans-serif",
    },
    "heading": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
    },
    "monospace": Object {
      "fontFamily": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", \\"Andale Mono\\", \\"Ubuntu Mono\\", Menlo, Courier, monospace",
    },
    "subheading": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
    },
    "text": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
    },
    "typography": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
    },
  },
  "mixins": Object {
    "gutters": [Function],
    "toolbar": Object {
      "@media (min-width:0px) and (orientation: landscape)": Object {
        "minHeight": 48,
      },
      "@media (min-width:600px)": Object {
        "minHeight": 64,
      },
      "minHeight": 56,
    },
  },
  "overrides": Object {
    "MuiAlert": Object {
      "root": Object {
        "marginBottom": "8px",
        "marginTop": "8px",
      },
    },
    "MuiBackdrop": Object {
      "root": Object {
        "color": "#7E7E7E",
      },
    },
    "MuiBadge": Object {
      "colorSecondary": Object {
        "backgroundColor": "#616161",
      },
    },
    "MuiButton": Object {
      "contained": Object {
        "&$disabled": Object {
          "backgroundColor": "#B1B1B188",
        },
        "&:hover": Object {
          "backgroundColor": "rgb(183, 183, 183)",
        },
        "backgroundColor": "#9E9E9E",
      },
      "containedPrimary": Object {
        "&$disabled": Object {
          "backgroundColor": "#FFBB0088",
        },
        "&:hover": Object {
          "backgroundColor": "rgb(255, 210, 91)",
        },
        "color": "rgba(0, 0, 0, 0.87)",
      },
      "containedSecondary": Object {
        "&:hover": Object {
          "@media (hover: none)": Object {
            "backgroundColor": "#A2A2A2",
          },
          "backgroundColor": "rgb(109, 109, 109)",
        },
        "backgroundColor": "#616161",
        "color": "#FFAC00",
      },
      "disabled": Object {},
      "outlined": Object {
        "&$disabled": Object {
          "borderColor": "#7E7E7E88",
          "color": "#CFCFCF88",
        },
      },
      "outlinedPrimary": Object {
        "&$disabled": Object {
          "backgroundColor": "rgb(255, 204, 63)88",
          "borderColor": "#E9E9E988",
        },
        "&:hover": Object {
          "backgroundColor": "rgb(255, 221, 131)",
          "borderColor": "rgba(0, 0, 0, 0.87)",
        },
        "backgroundColor": "#FFCF4D",
        "borderColor": "rgba(0, 0, 0, 0.87)",
        "color": "rgba(0, 0, 0, 0.87)",
      },
      "outlinedSecondary": Object {
        "&$disabled": Object {
          "backgroundColor": "rgb(190, 190, 190)88",
          "borderColor": "#FFBB0088",
        },
        "&:hover": Object {
          "backgroundColor": "rgb(157, 157, 157)",
          "borderColor": "rgb(191, 129, 0)",
        },
        "backgroundColor": "#7D7D7D",
        "borderColor": "#FFAC00",
        "color": "#FFAC00",
      },
      "root": Object {
        "textTransform": "none",
      },
      "text": Object {
        "&$disabled": Object {
          "color": "#F7F7F788",
        },
      },
      "textPrimary": Object {
        "&$disabled": Object {},
        "&:hover": Object {
          "backgroundColor": "rgba(69, 69, 69, 0.08)",
        },
        "color": "#FFBB00",
      },
      "textSecondary": Object {
        "&:hover": Object {
          "backgroundColor": "rgba(255, 187, 0, 0.08)",
        },
        "color": "#A2A2A2",
      },
    },
    "MuiCheckbox": Object {
      "colorPrimary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#454545",
        },
        "&$checked": Object {
          "&$disabled": Object {
            "color": "rgba(126, 126, 126, 0.7)",
          },
          "&:hover": Object {
            "backgroundColor": "rgba(69, 69, 69, 0.08)",
          },
          "color": "#FFBB00",
        },
        "&$disabled": Object {
          "color": "rgba(126, 126, 126, 0.7)",
        },
        "color": "#FFBB00",
      },
      "colorSecondary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#FFBB00",
        },
        "&$checked": Object {
          "&:hover": Object {
            "backgroundColor": "rgba(255, 187, 0, 0.08)",
          },
          "color": "#A2A2A2",
        },
        "&$disabled": Object {
          "color": "rgba(126, 126, 126, 0.7)",
        },
        "color": "#A2A2A2",
      },
      "root": Object {
        "&$disabled": Object {
          "color": "rgba(126, 126, 126, 0.7)",
        },
        "color": "#7E7E7E",
      },
    },
    "MuiCssBaseline": Object {
      "@global": Object {
        "button, input, optgroup, select, textarea": Object {
          "fontFamily": "inherit",
          "fontSize": "inherit",
        },
        "textRendering": "optimizeLegibility",
        "textSizeAdjust": "100%",
      },
    },
    "MuiDialog": Object {
      "paper": Object {
        "borderTop": "4px solid #FFBB00",
      },
    },
    "MuiDivider": Object {
      "vertical": Object {
        "height": "auto",
      },
    },
    "MuiIconButton": Object {
      "colorPrimary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#FFBB00",
        },
        "&:hover": Object {
          "backgroundColor": "rgba(255, 187, 0, 0.08)",
        },
      },
      "colorSecondary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#A2A2A2",
        },
        "&:hover": Object {
          "backgroundColor": "rgba(255, 187, 0, 0.08)",
        },
        "color": "#A2A2A2",
      },
    },
    "MuiRadio": Object {
      "colorPrimary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#7D7D7D",
        },
        "& svg:nth-of-type(2)": Object {
          "color": "#7D7D7D",
        },
        "&$checked": Object {
          "&:hover": Object {
            "backgroundColor": "rgba(69, 69, 69, 0.08)",
          },
          "color": "#FFBB00",
        },
        "&$disabled": Object {
          "& svg:nth-of-type(2)": Object {
            "color": "#45454588",
          },
          "color": "#FFBB0088",
        },
        "color": "#FFBB00",
      },
      "colorSecondary": Object {
        "& span:nth-of-type(2)": Object {
          "color": "#FFBB00",
        },
        "& svg:nth-of-type(2)": Object {
          "color": "#FFBB00",
        },
        "&$checked": Object {
          "&:hover": Object {
            "backgroundColor": "rgba(255, 187, 0, 0.08)",
          },
          "color": "#A2A2A2",
        },
        "&$disabled": Object {
          "& svg:nth-of-type(2)": Object {
            "color": "#FFBB0088",
          },
          "color": "#E9E9E988",
        },
        "color": "#A2A2A2",
      },
      "root": Object {
        "&$disabled": Object {
          "color": "#7E7E7E88",
        },
        "color": "#7E7E7E",
      },
    },
    "MuiSwitch": Object {
      "colorPrimary": Object {
        "&$checked + $track": Object {
          "backgroundColor": "#FFCF4D",
        },
      },
      "root": Object {
        "&$disabled": Object {
          "color": "#7E7E7E88",
        },
        "color": "#7E7E7E",
      },
    },
    "MuiTableBody": Object {
      "root": Object {
        "& tr:last-child": Object {
          "borderBottom": "1px solid #FFBB00",
        },
        "& tr:last-child > td": Object {
          "borderBottom": "none",
        },
        "& tr:last-child > th": Object {
          "borderBottom": "none",
        },
        "& tr:nth-child(even)": Object {
          "backgroundColor": "#515151",
        },
        "borderColor": "#515151",
      },
    },
    "MuiTableFooter": Object {
      "root": Object {
        "& th,td": Object {
          "borderBottom": "none",
          "borderTop": "none",
          "color": "#F7F7F7",
          "fontWeight": "bold",
        },
        "borderBottom": "1px solid #FFBB00",
        "borderTop": "1px solid #FFBB00",
      },
    },
    "MuiTableHead": Object {
      "root": Object {
        "& th": Object {
          "borderBottom": "none",
          "color": "#F7F7F7",
          "fontWeight": "bold",
        },
        "borderBottom": "1px solid #FFBB00",
      },
    },
    "MuiTabs": Object {
      "indicator": Object {
        "backgroundColor": "#454545",
        "height": "4px",
      },
    },
  },
  "palette": Object {
    "action": Object {
      "activatedOpacity": 0.24,
      "active": "rgba(255, 255, 255, 0.95)",
      "disabled": "rgba(255, 255, 255, 0.3)",
      "disabledBackground": "rgba(255, 255, 255, 0.12)",
      "disabledOpacity": 0.38,
      "focus": "rgba(255, 255, 255, 0.12)",
      "focusOpacity": 0.12,
      "hover": "rgba(255, 255, 255, 0.08)",
      "hoverOpacity": 0.08,
      "selected": "rgba(255, 255, 255, 0.16)",
      "selectedOpacity": 0.16,
    },
    "augmentColor": [Function],
    "background": Object {
      "default": "black",
      "paper": "#3B3B3B",
    },
    "brand": Object {
      "contrastText": "#222222",
      "dark": "#363636",
      "light": "#7D7D7D",
      "main": "#454545",
    },
    "common": Object {
      "black": "#000",
      "white": "#fff",
    },
    "contrastThreshold": 3,
    "divider": "rgba(255, 255, 255, 0.8)",
    "error": Object {
      "100": "#FACDCD",
      "200": "#F29B9B",
      "300": "#E66A6A",
      "400": "#D64545",
      "50": "#FFEEEE",
      "500": "#BA2525",
      "600": "#A61B1B",
      "700": "#911111",
      "800": "#780A0A",
      "900": "#610404",
      "A100": "#FFC3C3",
      "A200": "#FF9090",
      "A400": "#FF5D5D",
      "A700": "#FF4444",
      "contrastText": "#fff",
      "dark": "#911111",
      "light": "#E66A6A",
      "main": "#BA2525",
    },
    "getContrastText": [Function],
    "grey": Object {
      "100": "#E1E1E1",
      "200": "#CFCFCF",
      "300": "#B1B1B1",
      "400": "#9E9E9E",
      "50": "#F7F7F7",
      "500": "#7E7E7E",
      "600": "#626262",
      "700": "#515151",
      "800": "#3B3B3B",
      "900": "#222222",
      "A100": "#d5d5d5",
      "A200": "#aaaaaa",
      "A400": "#303030",
      "A700": "#616161",
    },
    "info": Object {
      "contrastText": "#222222",
      "dark": "#2BB0ED",
      "light": "#B3ECFF",
      "main": "#5ED0FA",
    },
    "primary": Object {
      "contrastText": "#454545",
      "dark": "#FFAC00",
      "light": "#FFCF4D",
      "main": "#FFBB00",
    },
    "secondary": Object {
      "contrastText": "#FFBB00",
      "dark": "#616161",
      "light": "#E9E9E9",
      "main": "#A2A2A2",
    },
    "success": Object {
      "contrastText": "#222222",
      "dark": "#147D64",
      "light": "#65D6AD",
      "main": "#27AB83",
    },
    "text": Object {
      "disabled": "#CFCFCF",
      "hint": "#7E7E7E",
      "icon": "rgba(255, 255, 255, 0.5)",
      "primary": "#F7F7F7",
      "secondary": "#E1E1E1",
    },
    "tonalOffset": 0.2,
    "type": "dark",
    "warning": Object {
      "contrastText": "#222222",
      "dark": "#AB4E19",
      "light": "#FAB38B",
      "main": "#E67635",
    },
  },
  "props": Object {},
  "shadows": Array [
    "none",
    "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
    "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
    "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
  ],
  "shape": Object {
    "borderRadius": 2,
  },
  "spacing": [Function],
  "transitions": Object {
    "create": [Function],
    "duration": Object {
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195,
      "short": 250,
      "shorter": 200,
      "shortest": 150,
      "standard": 300,
    },
    "easing": Object {
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
    },
    "getAutoHeightDuration": [Function],
  },
  "typography": Object {
    "body1": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1rem",
      "fontWeight": 400,
      "lineHeight": 1.5,
    },
    "body2": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.2238rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.2238rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.2238rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.1rem",
      "fontWeight": 400,
      "lineHeight": 1.43,
    },
    "button": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1rem",
      "fontWeight": 500,
      "lineHeight": 1.75,
      "textTransform": "uppercase",
    },
    "caption": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "0.833rem",
      "fontWeight": 400,
      "lineHeight": 1.66,
    },
    "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
    "fontSize": 16,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "2.5707rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "2.1422rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "2.3565rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.744rem",
      "fontWeight": 300,
      "lineHeight": 1.167,
    },
    "h2": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "2.0833rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.875rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.875rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.537rem",
      "fontWeight": 300,
      "lineHeight": 1.2,
    },
    "h3": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.7138rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.4996rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.7138rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.3639999999999999rem",
      "fontWeight": 400,
      "lineHeight": 1.167,
    },
    "h4": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.417rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.417rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.417rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.22rem",
      "fontWeight": 400,
      "lineHeight": 1.235,
    },
    "h5": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.1244rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.1244rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.1244rem",
      },
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1.1rem",
      "fontWeight": 400,
      "lineHeight": 1.334,
    },
    "h6": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1rem",
      "fontWeight": 500,
      "lineHeight": 1.6,
    },
    "htmlFontSize": 16,
    "overline": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "0.833rem",
      "fontWeight": 400,
      "lineHeight": 2.66,
      "textTransform": "uppercase",
    },
    "pxToRem": [Function],
    "round": [Function],
    "subtitle1": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "1rem",
      "fontWeight": 400,
      "lineHeight": 1.75,
    },
    "subtitle2": Object {
      "fontFamily": "-apple-system, BlinkMacSystemFont, \\"San Francisco\\", Roboto,  \\"Segoe UI\\", \\"Helvetica Neue\\"",
      "fontSize": "0.833rem",
      "fontWeight": 500,
      "lineHeight": 1.57,
    },
  },
  "zIndex": Object {
    "appBar": 1100,
    "drawer": 1200,
    "mobileStepper": 1000,
    "modal": 1300,
    "snackbar": 1400,
    "speedDial": 1050,
    "tooltip": 1500,
  },
}
`;

exports[`createMaterialTheme with no options gives default material theme 1`] = `
Object {
  "breakpoints": Object {
    "between": [Function],
    "down": [Function],
    "keys": Array [
      "xs",
      "sm",
      "md",
      "lg",
      "xl",
    ],
    "only": [Function],
    "up": [Function],
    "values": Object {
      "lg": 1280,
      "md": 960,
      "sm": 600,
      "xl": 1920,
      "xs": 0,
    },
    "width": [Function],
  },
  "direction": "ltr",
  "fontSizing": [Function],
  "fonts": Object {
    "display": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif\\"",
    },
    "heading": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif\\"",
    },
    "monospace": Object {
      "fontFamily": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", \\"Andale Mono\\", \\"Ubuntu Mono\\", Menlo, Courier, monospace",
    },
    "subheading": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif\\"",
    },
    "text": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif\\"",
    },
    "typography": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif\\"",
    },
  },
  "mixins": Object {
    "gutters": [Function],
    "toolbar": Object {
      "@media (min-width:0px) and (orientation: landscape)": Object {
        "minHeight": 48,
      },
      "@media (min-width:600px)": Object {
        "minHeight": 64,
      },
      "minHeight": 56,
    },
  },
  "overrides": Object {},
  "palette": Object {
    "action": Object {
      "activatedOpacity": 0.12,
      "active": "rgba(0, 0, 0, 0.54)",
      "disabled": "rgba(0, 0, 0, 0.26)",
      "disabledBackground": "rgba(0, 0, 0, 0.12)",
      "disabledOpacity": 0.38,
      "focus": "rgba(0, 0, 0, 0.12)",
      "focusOpacity": 0.12,
      "hover": "rgba(0, 0, 0, 0.04)",
      "hoverOpacity": 0.04,
      "selected": "rgba(0, 0, 0, 0.08)",
      "selectedOpacity": 0.08,
    },
    "augmentColor": [Function],
    "background": Object {
      "default": "#fafafa",
      "paper": "#fff",
    },
    "brand": Object {
      "contrastText": "#222222",
      "dark": "#FFAC00",
      "light": "#FFCF4D",
      "main": "#FFBB00",
    },
    "common": Object {
      "black": "#000",
      "white": "#fff",
    },
    "contrastThreshold": 3,
    "divider": "rgba(0, 0, 0, 0.12)",
    "error": Object {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
    "getContrastText": [Function],
    "grey": Object {
      "100": "#f5f5f5",
      "200": "#eeeeee",
      "300": "#e0e0e0",
      "400": "#bdbdbd",
      "50": "#fafafa",
      "500": "#9e9e9e",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
      "A100": "#d5d5d5",
      "A200": "#aaaaaa",
      "A400": "#303030",
      "A700": "#616161",
    },
    "info": Object {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "primary": Object {
      "contrastText": "#fff",
      "dark": "#303f9f",
      "light": "#7986cb",
      "main": "#3f51b5",
    },
    "secondary": Object {
      "contrastText": "#fff",
      "dark": "#c51162",
      "light": "#ff4081",
      "main": "#f50057",
    },
    "success": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "text": Object {
      "disabled": "rgba(0, 0, 0, 0.38)",
      "hint": "rgba(0, 0, 0, 0.38)",
      "primary": "rgba(0, 0, 0, 0.87)",
      "secondary": "rgba(0, 0, 0, 0.54)",
    },
    "tonalOffset": 0.2,
    "type": "light",
    "warning": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
  },
  "props": Object {},
  "shadows": Array [
    "none",
    "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
    "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
    "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
  ],
  "shape": Object {
    "borderRadius": 4,
  },
  "spacing": [Function],
  "transitions": Object {
    "create": [Function],
    "duration": Object {
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195,
      "short": 250,
      "shorter": 200,
      "shortest": 150,
      "standard": 300,
    },
    "easing": Object {
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
    },
    "getAutoHeightDuration": [Function],
  },
  "typography": Object {
    "body1": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "1rem",
      "fontWeight": 400,
      "letterSpacing": "0.00938em",
      "lineHeight": 1.5,
    },
    "body2": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 400,
      "letterSpacing": "0.01071em",
      "lineHeight": 1.43,
    },
    "button": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 500,
      "letterSpacing": "0.02857em",
      "lineHeight": 1.75,
      "textTransform": "uppercase",
    },
    "caption": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "letterSpacing": "0.03333em",
      "lineHeight": 1.66,
    },
    "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
    "fontSize": 14,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "5.9983rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "4.7129rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "5.3556rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "3.5rem",
      "fontWeight": 300,
      "letterSpacing": "-0.01562em",
      "lineHeight": 1.167,
    },
    "h2": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "3.75rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "2.9167rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "3.3333rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "2.375rem",
      "fontWeight": 300,
      "letterSpacing": "-0.00833em",
      "lineHeight": 1.2,
    },
    "h3": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "2.9991rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "2.5707rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "2.7849rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "2rem",
      "fontWeight": 400,
      "letterSpacing": "0em",
      "lineHeight": 1.167,
    },
    "h4": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "2.0243rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.8219rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "2.0243rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "1.5625rem",
      "fontWeight": 400,
      "letterSpacing": "0.00735em",
      "lineHeight": 1.235,
    },
    "h5": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.4993rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.3118rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.4993rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "1.25rem",
      "fontWeight": 400,
      "letterSpacing": "0em",
      "lineHeight": 1.334,
    },
    "h6": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.25rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.25rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.25rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "1.125rem",
      "fontWeight": 500,
      "letterSpacing": "0.0075em",
      "lineHeight": 1.6,
    },
    "htmlFontSize": 16,
    "overline": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "letterSpacing": "0.08333em",
      "lineHeight": 2.66,
      "textTransform": "uppercase",
    },
    "pxToRem": [Function],
    "round": [Function],
    "subtitle1": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "1rem",
      "fontWeight": 400,
      "letterSpacing": "0.00938em",
      "lineHeight": 1.75,
    },
    "subtitle2": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 500,
      "letterSpacing": "0.00714em",
      "lineHeight": 1.57,
    },
  },
  "zIndex": Object {
    "appBar": 1100,
    "drawer": 1200,
    "mobileStepper": 1000,
    "modal": 1300,
    "snackbar": 1400,
    "speedDial": 1050,
    "tooltip": 1500,
  },
}
`;

exports[`createMaterialTheme with no options gives default material theme 2`] = `
Object {
  "breakpoints": Object {
    "between": [Function],
    "down": [Function],
    "keys": Array [
      "xs",
      "sm",
      "md",
      "lg",
      "xl",
    ],
    "only": [Function],
    "up": [Function],
    "values": Object {
      "lg": 1280,
      "md": 960,
      "sm": 600,
      "xl": 1920,
      "xs": 0,
    },
    "width": [Function],
  },
  "direction": "ltr",
  "fontSizing": [Function],
  "fonts": Object {
    "display": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif\\"",
    },
    "heading": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif\\"",
    },
    "monospace": Object {
      "fontFamily": "\\"SFMono-Regular\\", Consolas, \\"Liberation Mono\\", \\"Andale Mono\\", \\"Ubuntu Mono\\", Menlo, Courier, monospace",
    },
    "subheading": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif\\"",
    },
    "text": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif\\"",
    },
    "typography": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif\\"",
    },
  },
  "mixins": Object {
    "gutters": [Function],
    "toolbar": Object {
      "@media (min-width:0px) and (orientation: landscape)": Object {
        "minHeight": 48,
      },
      "@media (min-width:600px)": Object {
        "minHeight": 64,
      },
      "minHeight": 56,
    },
  },
  "overrides": Object {},
  "palette": Object {
    "action": Object {
      "activatedOpacity": 0.24,
      "active": "#fff",
      "disabled": "rgba(255, 255, 255, 0.3)",
      "disabledBackground": "rgba(255, 255, 255, 0.12)",
      "disabledOpacity": 0.38,
      "focus": "rgba(255, 255, 255, 0.12)",
      "focusOpacity": 0.12,
      "hover": "rgba(255, 255, 255, 0.08)",
      "hoverOpacity": 0.08,
      "selected": "rgba(255, 255, 255, 0.16)",
      "selectedOpacity": 0.16,
    },
    "augmentColor": [Function],
    "background": Object {
      "default": "#303030",
      "paper": "#424242",
    },
    "brand": Object {
      "contrastText": "#222222",
      "dark": "#363636",
      "light": "#7D7D7D",
      "main": "#454545",
    },
    "common": Object {
      "black": "#000",
      "white": "#fff",
    },
    "contrastThreshold": 3,
    "divider": "rgba(255, 255, 255, 0.12)",
    "error": Object {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
    "getContrastText": [Function],
    "grey": Object {
      "100": "#f5f5f5",
      "200": "#eeeeee",
      "300": "#e0e0e0",
      "400": "#bdbdbd",
      "50": "#fafafa",
      "500": "#9e9e9e",
      "600": "#757575",
      "700": "#616161",
      "800": "#424242",
      "900": "#212121",
      "A100": "#d5d5d5",
      "A200": "#aaaaaa",
      "A400": "#303030",
      "A700": "#616161",
    },
    "info": Object {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "primary": Object {
      "contrastText": "#fff",
      "dark": "#303f9f",
      "light": "#7986cb",
      "main": "#3f51b5",
    },
    "secondary": Object {
      "contrastText": "#fff",
      "dark": "#c51162",
      "light": "#ff4081",
      "main": "#f50057",
    },
    "success": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "text": Object {
      "disabled": "rgba(255, 255, 255, 0.5)",
      "hint": "rgba(255, 255, 255, 0.5)",
      "icon": "rgba(255, 255, 255, 0.5)",
      "primary": "#fff",
      "secondary": "rgba(255, 255, 255, 0.7)",
    },
    "tonalOffset": 0.2,
    "type": "dark",
    "warning": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
  },
  "props": Object {},
  "shadows": Array [
    "none",
    "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
    "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
    "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
  ],
  "shape": Object {
    "borderRadius": 4,
  },
  "spacing": [Function],
  "transitions": Object {
    "create": [Function],
    "duration": Object {
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195,
      "short": 250,
      "shorter": 200,
      "shortest": 150,
      "standard": 300,
    },
    "easing": Object {
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
    },
    "getAutoHeightDuration": [Function],
  },
  "typography": Object {
    "body1": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "1rem",
      "fontWeight": 400,
      "letterSpacing": "0.00938em",
      "lineHeight": 1.5,
    },
    "body2": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 400,
      "letterSpacing": "0.01071em",
      "lineHeight": 1.43,
    },
    "button": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 500,
      "letterSpacing": "0.02857em",
      "lineHeight": 1.75,
      "textTransform": "uppercase",
    },
    "caption": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "letterSpacing": "0.03333em",
      "lineHeight": 1.66,
    },
    "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
    "fontSize": 14,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "5.9983rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "4.7129rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "5.3556rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "3.5rem",
      "fontWeight": 300,
      "letterSpacing": "-0.01562em",
      "lineHeight": 1.167,
    },
    "h2": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "3.75rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "2.9167rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "3.3333rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "2.375rem",
      "fontWeight": 300,
      "letterSpacing": "-0.00833em",
      "lineHeight": 1.2,
    },
    "h3": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "2.9991rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "2.5707rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "2.7849rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "2rem",
      "fontWeight": 400,
      "letterSpacing": "0em",
      "lineHeight": 1.167,
    },
    "h4": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "2.0243rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.8219rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "2.0243rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "1.5625rem",
      "fontWeight": 400,
      "letterSpacing": "0.00735em",
      "lineHeight": 1.235,
    },
    "h5": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.4993rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.3118rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.4993rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "1.25rem",
      "fontWeight": 400,
      "letterSpacing": "0em",
      "lineHeight": 1.334,
    },
    "h6": Object {
      "@media (min-width:1280px)": Object {
        "fontSize": "1.25rem",
      },
      "@media (min-width:600px)": Object {
        "fontSize": "1.25rem",
      },
      "@media (min-width:960px)": Object {
        "fontSize": "1.25rem",
      },
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "1.125rem",
      "fontWeight": 500,
      "letterSpacing": "0.0075em",
      "lineHeight": 1.6,
    },
    "htmlFontSize": 16,
    "overline": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "letterSpacing": "0.08333em",
      "lineHeight": 2.66,
      "textTransform": "uppercase",
    },
    "pxToRem": [Function],
    "round": [Function],
    "subtitle1": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "1rem",
      "fontWeight": 400,
      "letterSpacing": "0.00938em",
      "lineHeight": 1.75,
    },
    "subtitle2": Object {
      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 500,
      "letterSpacing": "0.00714em",
      "lineHeight": 1.57,
    },
  },
  "zIndex": Object {
    "appBar": 1100,
    "drawer": 1200,
    "mobileStepper": 1000,
    "modal": 1300,
    "snackbar": 1400,
    "speedDial": 1050,
    "tooltip": 1500,
  },
}
`;
